--- a/test/fixtures/comments.yml
+++ b/test/fixtures/comments.yml
@@ -1,9 +1,11 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  content: MyString
-  post_id: 1
+  c_id: 1
+  content: MyText
+  time: 2018-07-12 07:12:35
 
 two:
-  content: MyString
-  post_id: 1
+  c_id: 1
+  content: MyText
+  time: 2018-07-12 07:12:35
